# ros2_warehouse_bot

./: .env  .gitignore  README.md  bashrc.txt  camera_test.py
logs_and_stuff/: bashrc.txt  config.txt  install_log.txt  open_manip_service_output.txt  open_manipulator_tutorial.txt  tb_launch_error.txt  tb_open_manip_launch_error.txt
maps/001_async/: kilab_001_async.data  kilab_001_async.pgm  kilab_001_async.posegraph  kilab_001_async.yaml
maps/002_async/: kilab_002_async.data  kilab_002_async.pgm  kilab_002_async.posegraph  kilab_002_async.yaml
maps/003_async/: kilab_003_async.data  kilab_003_async.pgm  kilab_003_async.posegraph  kilab_003_async.yaml
maps/003_async_new/: kilab_async_003_new.data  kilab_async_003_new.pgm  kilab_async_003_new.posegraph  kilab_async_003_new.yaml
maps/kilab_async_002_lds_new/: kilab_async_002.data  kilab_async_002.pgm  kilab_async_002.posegraph  kilab_async_002.yaml  params.yaml
maps/kilab_async_003_1/: kilab_async_003_1.data  kilab_async_003_1.yaml
maps/kilab_async_003_lds_old/: kilab_async_003_1.pgm  kilab_async_003_1.posegraph
maps/new/: kilab.data  kilab.posegraph  kilab_gazebo.data  kilab_gazebo.posegraph  kilab_lab.posegraph  turtlebot3_house_serialize.data
maps/old/: kilab.pgm  kilab.yaml  kilab_gazebo.pgm  kilab_gazebo.yaml  kilab_lab.data  kilab_lab.pgm  kilab_lab.yaml  turtlebot3_house_save.pgm  turtlebot3_house_save.yaml
misc/: camera_feed_publisher.py  color_recognition_controller.py  scan_filter.py  scan_listener.py
src/action_tutorials_interfaces/: CMakeLists.txt  package.xml
src/more_interfaces/: CMakeLists.txt  package.xml
src/python_parameters/: package.xml  setup.py
src/python_parameters/launch/: python_parameters_launch.py
src/python_parameters/python_parameters/: __init__.py  python_parameters_node.py
src/test_package/: CMakeLists.txt  package.xml
src/test_package/config/: mapper_params_localization.yaml  mapper_params_online_async.yaml
src/test_package/description/: example_robot.urdf.xacro  robot.urdf.xacro
src/test_package/launch/: listener.launch.py  robot_state_publisher.launch.py  rsp.launch.py  rsp_sim.launch.py  scan_filter.launch.py  talker.launch.py
src/tutorial_interfaces/: package.xml
src/warehouse_bot/: package.xml  setup.cfg  setup.py
src/warehouse_bot/config/: nav2_params.yaml  (+4 more)
src/warehouse_bot_interfaces/: CMakeLists.txt  package.xml
src/warehouse_bot_pilots/: package.xml  setup.cfg  setup.py
src/warehouse_bot_pilots/launch/: warehouse_bot_pilots_launch.py
src/warehouse_bot_pilots/warehouse_bot_pilots/: move_back_server.py  pose_optimizer.py  product_aligner.py  product_gripper.py  product_manipulator.py
src/warehouse_bot_sensors/: package.xml  setup.cfg  setup.py
src/warehouse_bot_sensors/launch/: warehouse_bot_sensors_launch.py
src/warehouse_bot_sensors/warehouse_bot_sensors/: image_provider.py  img_test.py  scan_filter.py
src/warehouse_bot_world/: package.xml  setup.cfg  setup.py
(+34 files in other folders)
