<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_bot_pilots</name>
  <version>0.0.0</version>
  <description>Pilots for warehouse bot</description>
  <maintainer email="arne.allwardt@th-brandenburg.de">Arne Allwardt</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!--it is recommended to include this when using launch files-->
  <exec_depend>ros2launch</exec_depend> 

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
